# ai-cicd-security-guardrail

./: .coverage  .dockerignore  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  action.yml  coverage.xml  pyproject.toml  report.json  report.md  requirements.txt
.github/workflows/: guardrail.yml  pages.yml
docs/: Gemfile  _config.yml  app.md  architecture.md  demo.md  index.md  portfolio.md
docs/_includes/: head-custom.html  nav.html
docs/_layouts/: default.html
docs/_site/: index.html
docs/_site/app/: index.html
docs/_site/architecture/: index.html
docs/_site/assets/css/: style.css
docs/_site/assets/data/: compliance-rules.json
docs/_site/assets/js/: guardrail-demo.js
docs/_site/demo/: index.html
docs/_site/portfolio/: index.html
docs/assets/css/: style.scss
sample_code/: false_positive.c  vulnerable.c
src/guardrail/: __init__.py  __main__.py  cli.py  code_fetcher.py  config.py  llm_client.py  models.py  triage.py
src/guardrail/compliance/: __init__.py  cert_c.py  fips.py  misra_c.py
src/guardrail/parsers/: __init__.py  cppcheck.py  sarif.py  sonarqube.py
tests/: __init__.py  test_cli.py  test_parsers.py  test_triage.py
tests/fixtures/: sample.sarif
